--- a/service/config/config.json
+++ b/service/config/config.json
@@ -1,5 +1,5 @@
 {
-  "mongo": "mongodb://admin:mhjs210424@127.0.0.1:27017",
+  "mongo": "mongodb://admin:mhjs210424@127.0.0.1:27017/",
   "redis": {
     "addr": "127.0.0.1:6379",
     "password": "",
